--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header>
-
         <div class="logo float-left">
             <a href=""><img src="/public/images/logo.png" alt=""></a>
         </div>
@@ -22,7 +21,7 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container hero">
         <div class="row">
             <div class="col-lg-12">
                 <div id="content">
@@ -32,8 +31,55 @@
                 </div>
             </div>
         </div>
+        <div class="overlay"></div>
     </div>
     <img src="/public/images/hero.jpg" class="bg"/>
 
+    <div class="container nav-menu">
+        <div class="nav navbar-nav">
+            <ul class="menu">
+                <a href=""><li>Portfolio</li></a>
+                <a href=""><li>About</li></a>
+                <a href=""><li>Contact</li></a>
+            </ul>
+        </div>
+    </div>
 
+    <div class="container portfolio">
+        <div class="inner">
+                <div class="row item">
+                    <div class="caption col-sm-6">
+                        <a href=""><h2>Zdes' budet nazvanie razdela</h2></a>
+                        <p>Show your images and video with old polaroid gallery style. Polaroid Gallery type gives you professional result and covers a wide range of features. Make your wordpress photo gallery awesome with polaroid effect!
+                            The default version of WordPress allows you to add images to posts and pages, but this is rather limited — if you’re serious about attracting new clients, it just won’t cut it. If you’re claiming to be a creative individual, then you need a professional looking and original portfolio, right? Polaroid Gallery enables you to create incredible, stylish, responsive image grids from polaroid photos!
+                        </p>
+                    </div>
+                    <div class="frame image col-sm-5 offset-sm-1">
+                        <a href="">
+                            <img src="/public/images/1.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            <div class="divider">
+                <img src="/public/images/divider.svg" alt="">
+            </div>
+
+                <div class="row item">
+                    <div class="frame image col-sm-5">
+                        <a href="">
+                            <img src="/public/images/1.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="caption col-sm-6 offset-sm-1">
+                        <h2>Zdes' budet nazvanie razdela</h2>
+                        <p>Show your images and video with old polaroid gallery style. Polaroid Gallery type gives you professional result and covers a wide range of features. Make your wordpress photo gallery awesome with polaroid effect!
+                            The default version of WordPress allows you to add images to posts and pages, but this is rather limited — if you’re serious about attracting new clients, it just won’t cut it. If you’re claiming to be a creative individual, then you need a professional looking and original portfolio, right? Polaroid Gallery enables you to create incredible, stylish, responsive image grids from polaroid photos!
+                        </p>
+                    </div>
+                </div>
+        </div>
+
+    </div>
+
+    <script type="text/javascript" src="/public/javascripts/main.js"></script>
 </body>
