--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -54,7 +54,7 @@ img.bg {
   padding: 15% 0 35% 0;
   margin: 0 auto;
 
-  h1{
+  h1.stalem{
     font-weight: 300;
     letter-spacing: -3px;
     line-height: 160px;
@@ -89,23 +89,22 @@ img.bg {
     0px 8px 13px rgba(0,0,0,0.1),
     0px 18px 23px rgba(0,0,0,0.1);
   }
-
-  .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    @include background-radial(rgba(0,0,0,0), 0%, rgba(0,0,0,0.65), 100%);
-    margin: 0;
-    opacity: 1;
-    top: 0;
-    left: 0;
-    z-index: 10;
-
-    -webkit-animation: fade-in .7s ease-out reverse;
-    -o-animation: fade-in .7s ease-out reverse;
-    animation: fade-in .7s ease-out reverse;
-  }
 }
+//.overlay {
+//  position: relative;
+//  width: 100%;
+//  height: 100%;
+//  @include background-radial(rgba(0,0,0,0), 0%, rgba(0,0,0,0.65), 100%);
+//  margin: 0;
+//  opacity: 1;
+//  top: 0;
+//  left: 0;
+//
+//  -webkit-animation: fade-in .7s ease-out reverse;
+//  -o-animation: fade-in .7s ease-out reverse;
+//  animation: fade-in .7s ease-out reverse;
+//}
+
 body > * {
   z-index: 1;
   position: relative;
@@ -315,6 +314,77 @@ body > * {
     right:-2.5vmin;
     top:-2.5vmin;
   }
+}
+
+//*********************
+.info {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+  padding: 90px;
+  margin: 90px auto;
+  .inner{
+    padding: 25px;
+    background: #e2e2e2;
+    box-shadow: 9px 10px 60px 67px #e2e2e2;
+
+    h1 {
+      font-size: 50px;
+      text-align: center;
+      text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+      0px 8px 13px rgba(0,0,0,0.1),
+      0px 18px 23px rgba(0,0,0,0.1);
+      margin-bottom: 25px;
+    }
+    p {
+      font-family: "Roboto", sans-serif;
+      line-height: 30px;
+    }
+  }
+}
+
+//***************
+.social {
+  position: relative;
+  display: flex;
+  width: 100%;
+  min-height: 100%;
+  padding: 90px;
+  margin: 90px auto;
+  .inner {
+    width: 100%;
+    background: #e2e2e2;
+    box-shadow: 9px 10px 60px 67px #e2e2e2;
+    .icons {
+      text-align: center;
+      margin: 0 auto;
+    }
+    img {
+      max-width: 100px;
+      margin: 0 70px;
+    }
+  }
+}
+
+//**************
+footer {
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  margin-top: -70pxs;
+  border-top: 1px solid gray;
+  .float-right {
+    margin-left: auto;
+    color: #ddddcc;
+    margin-right: 50px;
+    a {
+    color: #a2a2a2;
+    }
+  }
+
 }
 
 
