--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Stalem</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
-    <link rel="stylesheet" href="/public/stylesheets/styles.css">
-</head>
-<body>
-    <header>
-        <div class="logo float-left">
-            <a href=""><img src="/public/images/logo.png" alt=""></a>
-        </div>
-        <div class="hamburger float-right">
-            <div id="nav-icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </header>
-
+<% include partials/header.ejs%>
     <div class="container hero">
         <div class="row">
             <div class="col-lg-12">
                 <div id="content">
-                    <h1>StaLem Art</h1>
+                    <h1 class="stalem">StaLem Art</h1>
                     <hr>
                     <h3>Art Page of Amateur Artist</h3>
                 </div>
             </div>
         </div>
-        <div class="overlay"></div>
+        <!--<div class="overlay"></div>-->
     </div>
     <img src="/public/images/hero.jpg" class="bg"/>
 
@@ -78,8 +56,25 @@
                     </div>
                 </div>
         </div>
-
     </div>
 
-    <script type="text/javascript" src="/public/javascripts/main.js"></script>
-</body>
+    <div class="container info">
+        <div class="inner">
+            <div class="caption">
+                <h1>About me</h1>
+                <p>Dr Joanne Righetti is an animal behaviourist, educating the public and professionals in all aspects of the human–animal relationship. Her background is in zoology, with a PhD in animal behaviour and a counselling diploma – qualifications which enable her to work with all sorts of animals – including the human variety! Joanne likes to help pet owners understand their pet's behaviour and solve any pet behaviour problems. She also consults to a variety of organisations including non-profit organisations, commercial companies and councils and is involved in a variety of media including regular spots on radio. Joanne is an honorary associate of the Faculty of Veterinary Sciences, University of Sydney. Find out more about Joanne at </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container social">
+        <div class="inner">
+            <div class="container icons">
+                <img src="/public/images/vk.svg" alt="">
+                <img src="/public/images/telegram.svg" alt="">
+
+                <img src="/public/images/instagram.svg" alt="">
+            </div>
+        </div>
+    </div>
+<% include partials/footer.ejs%>
