Landing page edits

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,7 @@
     </div>
 
     <div class="container form">
-        <div class="blur">
-        </div>
+        <div class="blur"></div>
             <div class="form">
                 <form action="/login" method="POST" autocomplete="off">
 
