--- a/public/stylesheets/nav.scss
+++ b/public/stylesheets/nav.scss
@@ -1,10 +1,10 @@
 header {
-  position: fixed;
+
   width: 100%;
   height: 70px;
   top: 0;
   .float-left{
-    position: relative;
+    position: fixed;
     opacity: 0.8;
     img{
       position: relative;
@@ -25,61 +25,156 @@ header {
       opacity: 0.8;
       transform: rotate(0deg);
       transition: .5s ease-in-out;
-    }
-    #nav-icon span {
-      position: absolute;
-      display: block;
-      height: 2px;
-      width: 100%;
-      background: white;
-      opacity: 1;
-      transform: rotate(0deg);
-      transition: .25s ease-in-out;
-    }
-    #nav-icon span:nth-child(1) {
-      top: 0;
-      transform-origin: left center;
-    }
-    #nav-icon span:nth-child(2) {
-      top: 10px;
-      transform-origin: left center;
-    }
-    #nav-icon span:nth-child(3) {
-      top: 20px;
-      transform-origin: left center;
-      width: 60%;
-      right: 0;
-    }
-    #nav-icon:hover span:nth-child(3) {
-      width: 100%;
-    }
-    #nav-icon.open {
-      opacity: 0.5;
-      cursor: pointer;
+
+      span {
+        position: absolute;
+        display: block;
+        height: 2px;
+        width: 100%;
+        background: white;
+        opacity: 1;
+        transform: rotate(0deg);
+        transition: .25s ease-in-out;
+
+        &:nth-child(1) {
+          top: 0;
+          transform-origin: left center;
+        }
+
+        &:nth-child(2) {
+          top: 10px;
+          transform-origin: left center;
+        }
+
+        &:nth-child(3) {
+          top: 20px;
+          transform-origin: left center;
+          width: 60%;
+          right: 0;
+        }
+
+      }
+
+      &:hover span:nth-child(3) {
+        width: 100%;
+      }
     }
 
-    #nav-icon.open:hover {
+  }
+}
+
+.container.nav-menu {
+  position: fixed;
+  display: none;
+  width: 50%;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  .navbar-nav {
+    display: block;
+    flex-direction: column;
+    transition: opacity 1s;
+    position: relative;
+    width: 100%;
+    height: 80%;
+    top: 5%;
+    margin: auto;
+    align-items: center;
+
+    .menu {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      vertical-align: middle;
+      text-align: center;
+      padding: 0;
+
+      a {
+        margin-bottom: 15px;
+      }
+      li:hover {
+        transition: color 0.5s;
+        color: #f5f1a9;
+      }
+
+      li {
+        font-weight: bold;
+        font-size: 80px !important;
+        text-decoration: none;
+        list-style: none;
+        letter-spacing: -1px;
+        line-height: 130px;
+        color: #ffffff;
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+    }
+  }
+}
+
+body.open {
+  img.bg{
+    background: black;
+    opacity: 0.7;
+  }
+  overflow: hidden;
+  #nav-icon {
+    opacity: 0.5;
+    cursor: pointer;
+
+    &:hover {
       opacity: 1;
     }
-    #nav-icon.open span:nth-child(1) {
+    span:nth-child(1) {
       -webkit-transform: rotate(45deg);
       -moz-transform: rotate(45deg);
       -o-transform: rotate(45deg);
       transform: rotate(45deg);
     }
-
-    #nav-icon.open span:nth-child(2) {
+    span:nth-child(2) {
       width: 0;
       opacity: 0;
     }
-
-    #nav-icon.open span:nth-child(3) {
+    span:nth-child(3) {
       -webkit-transform: rotate(-45deg);
       -moz-transform: rotate(-45deg);
       -o-transform: rotate(-45deg);
       transform: rotate(-45deg);
       top: 25px;
       width: 100%;
+    }
+  }
+
+  .hero {
+    transition: ease-in-out;
+    opacity: 0;
+  }
+
+  .nav-menu {
+    display: block;
+    .navbar-nav {
+      z-index: 1000;
+      transition: opacity 1s;
+      .menu {
+        li {
+          opacity: 1;
+          transform: translateY(20px);
+          a {
+            transition: font-size 0.5s;
+            cursor: pointer;
+          }
+
+        }
+        hr {
+          width: 100px;
+          height: 2px;
+          background: linear-gradient(to left, rgba(233, 233, 233, 0), rgba(233, 233, 233, 0.75), rgba(233, 233, 233, 0));
+        }
+      }
     }
   }
 }
