--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,6 @@
 <% include partials/header.ejs%>
+
+
     <div class="container hero">
         <div class="row">
             <div class="col-lg-12">
@@ -9,21 +11,24 @@
                 </div>
             </div>
         </div>
-        <!--<div class="overlay"></div>-->
     </div>
+
     <img src="/public/images/hero.jpg" class="bg"/>
 
     <div class="container nav-menu">
         <div class="nav navbar-nav">
             <ul class="menu">
-                <a href=""><li>Portfolio</li></a>
-                <a href=""><li>About</li></a>
-                <a href=""><li>Contact</li></a>
+                <a href="#portfolio"><li class="link">Portfolio</li></a>
+                <hr>
+                <a href="#about"><li class="link">About</li></a>
+                <hr>
+                <a href="#contact"><li class="link">Contact</li></a>
             </ul>
         </div>
+        <div class="overlay"></div>
     </div>
 
-    <div class="container portfolio">
+    <div class="container portfolio" id="portfolio">
         <div class="inner">
                 <div class="row item">
                     <div class="caption col-sm-6">
@@ -58,7 +63,7 @@
         </div>
     </div>
 
-    <div class="container info">
+    <div class="container info" id="about">
         <div class="inner">
             <div class="caption">
                 <h1>About me</h1>
@@ -67,7 +72,7 @@
         </div>
     </div>
 
-    <div class="container social">
+    <div class="container social" id="contact">
         <div class="inner">
             <div class="container icons">
                 <img src="/public/images/vk.svg" alt="">
