--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,12 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/public/stylesheets/styles.css">
     <link rel="stylesheet" href="/public/stylesheets/login.css">
+    <link rel="stylesheet" href="/public/stylesheets/nav.css">
 </head>
 <body>
 <header>
     <div class="logo float-left">
-        <a href=""><img src="/public/images/logo.png" alt=""></a>
+        <a href="/"><img src="/public/images/logo.png" alt=""></a>
     </div>
     <div class="hamburger float-right">
         <div id="nav-icon">
