--- a/public/stylesheets/portfolio.scss
+++ b/public/stylesheets/portfolio.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 0; /* height of your footer */
+  background-color: rgba(0,0,0,0);
 
   .navbar-fixed-left{
     width: 200px;
@@ -21,26 +22,45 @@
       vertical-align: middle;
       text-align: center;
       padding: 20px;
+      border-bottom: none;
 
-      a {
-        margin-bottom: 15px;
-      }
-      li:hover {
-        transition: color 0.5s;
-        color: #f5f1a9;
-      }
 
-      li {
+      a.nav-link{
+        margin-bottom: 20px;
         font-weight: bold;
-        font-size: 40px !important;
+        font-size: 45px !important;
         text-decoration: none;
         list-style: none;
         letter-spacing: -1px;
-        line-height: 50px;
+        line-height: 60px;
         color: #ffffff;
         opacity: 1;
         transform: translateY(20px);
+        border: none;
       }
+
+      a.nav-link:hover {
+        transition: color 0.5s;
+        color: #f5f1a9;
+        border: none;
+      }
+
+      a.nav-link.active{
+        background-color: rgba(0,0,0,0);
+        border: none;
+        color: #f5f1a9;
+      }
+      //li.nav-item{
+      //  font-weight: bold;
+      //  font-size: 40px !important;
+      //  text-decoration: none;
+      //  list-style: none;
+      //  letter-spacing: -1px;
+      //  line-height: 50px;
+      //  color: #ffffff;
+      //  opacity: 1;
+      //  transform: translateY(20px);
+      //}
 
     }
   }
