--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -13,6 +13,10 @@ html, body{
   font-family: 'Dancing Script', sans-serif;
   background: black;
   display: inline-block;
+  a {
+    text-decoration: none;
+    color: white;
+  }
   a:visited {
     text-decoration: none;
   }
