--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -2,61 +2,78 @@
 
 <div class="content portfolio">
 
+
     <div class="navbar-fixed-left">
-        <ul class="menu">
-            <a href=""><li class="link">Fan Art</li></a>
-            <hr>
-            <a href=""><li class="link">Fantasy</li></a>
-            <hr>
-            <a href=""><li class="link">Concept Art</li></a>
+        <ul class="nav nav-tabs menu" id="myTab" role="tablist">
+            <% sections.forEach(function (section) { %>
+                <li class="nav-item">
+                    <a class="nav-link" id="<%= section.name%>-tab" data-toggle="tab" href="#<%= section.name%>" role="tab" aria-controls="<%= section.name%>"><%= section.name%></a>
+                </li>
+            <% })%>
         </ul>
     </div>
 
-    <div class="container slider">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="img-thumbnail" src="/public/images/1.1.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="img-thumbnail" src="/public/images/1.2.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="img-thumbnail" src="/public/images/1.3.jpg" alt="Third slide">
-                </div>
-            </div>
+    <% sections.forEach(function (section) { %>
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane" id="<%= section.name%>" role="tabpanel" aria-labelledby="<%= section.name%>-tab">
+            <div class="container slider">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
+                    <ol class="carousel-indicators">
+                        <% for (var i = 0; i < section.pictures.length(); i++) { %>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="<%i%>" ></li>
+                        <%}%>
+                    </ol>
+                    <div class="carousel-inner">
+                        <% for (var i = 0; i < section.pictures.length(); i++) { %>
+                            <div class="carousel-item active">
+                                <img class="img-thumbnail" src="<%section.pictures.file%>">
+                            </div>
+                        <%}%>
+                    </div>
 
-            <div class="card card-block bg-faded">
-                <div class="text-right">
-                    <a class="btn btn-success" href="">
-                        Add new Comment
+                    <div class="card card-block bg-faded">
+                        <div class="text-right">
+                            <a class="btn btn-success" href="">
+                                Add new Comment
+                            </a>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <strong>Luiz</strong>
+                                <span class="pull-right">10 days ago</span>
+                                <p>It is increadible!!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
                     </a>
                 </div>
-                <hr>
-                <div class="row">
-                    <div class="col-md-12">
-                        <strong>Luiz</strong>
-                        <span class="pull-right">10 days ago</span>
-                        <p>It is increadible!!</p>
-                    </div>
-                </div>
             </div>
-
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+
+        <!--<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>-->
+        <!--<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>-->
     </div>
+    <% })%>
+    <!--<div class="navbar-fixed-left">-->
+        <!--<ul class="menu">-->
+            <!--<a href=""><li class="link">Fan Art</li></a>-->
+            <!--<hr>-->
+            <!--<a href=""><li class="link">Fantasy</li></a>-->
+            <!--<hr>-->
+            <!--<a href=""><li class="link">Concept Art</li></a>-->
+        <!--</ul>-->
+    <!--</div>-->
+
+
 
 
 
