--- a/public/stylesheets/nav.scss
+++ b/public/stylesheets/nav.scss
@@ -13,6 +13,21 @@ header {
     }
   }
 
+  .logout {
+    position: relative;
+    cursor: pointer;
+    margin: 20px 7px 20px 20px;
+    width: 26px;
+    height: 25px;
+    img {
+      position: relative;
+      width: 100%;
+      max-height: 30px;
+      opacity: 0.8;
+    }
+  }
+
+
   .hamburger {
     position: relative;
     cursor: pointer;
@@ -64,6 +79,8 @@ header {
 }
 
 .container.nav-menu {
+  flex-direction: column;
+  justify-content: center;
   position: fixed;
   display: none;
   width: 50%;
@@ -74,13 +91,10 @@ header {
   bottom: 0;
 
   .navbar-nav {
-    display: block;
+    //display: block;
     flex-direction: column;
     transition: opacity 1s;
     position: relative;
-    width: 100%;
-    height: 80%;
-    top: 5%;
     margin: auto;
     align-items: center;
 
@@ -155,7 +169,7 @@ body.open {
   }
 
   .nav-menu {
-    display: block;
+    display: flex;
     .navbar-nav {
       z-index: 1000;
       transition: opacity 1s;
