--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Stalem</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <!--<base href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/wanaka-tree.jpg">-->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -18,6 +19,7 @@
     <div class="logo float-left">
         <a href="/"><img src="/public/images/logo.png" alt=""></a>
     </div>
+
     <div class="hamburger float-right">
         <div id="nav-icon">
             <span></span>
@@ -25,4 +27,9 @@
             <span></span>
         </div>
     </div>
+    <%if (authorized) {%>
+    <div class="logout float-right">
+        <a href="/logout"><img src="/public/images/logout2.svg" alt=""></a>
+    </div>
+    <%}%>
 </header>
