--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,82 +1,83 @@
-<% include partials/header.ejs%>
-
-<div class="content portfolio">
+<% include partials/header.ejs %>
 
 
-    <div class="navbar-fixed-left">
-        <ul class="nav nav-tabs menu" id="myTab" role="tablist">
-            <% sections.forEach(function (section) { %>
-                <li class="nav-item">
-                    <a class="nav-link" id="<%= section.name%>-tab" data-toggle="tab" href="#<%= section.name%>" role="tab" aria-controls="<%= section.name%>"><%= section.name%></a>
-                </li>
-            <% })%>
-        </ul>
-    </div>
-
-    <% sections.forEach(function (section) { %>
-    <div class="tab-content" id="myTabContent">
-        <div class="tab-pane" id="<%= section.name%>" role="tabpanel" aria-labelledby="<%= section.name%>-tab">
-            <div class="container slider">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
-                    <ol class="carousel-indicators">
-                        <% for (var i = 0; i < section.pictures.length(); i++) { %>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="<%i%>" ></li>
-                        <%}%>
-                    </ol>
-                    <div class="carousel-inner">
-                        <% for (var i = 0; i < section.pictures.length(); i++) { %>
-                            <div class="carousel-item active">
-                                <img class="img-thumbnail" src="<%section.pictures.file%>">
-                            </div>
-                        <%}%>
-                    </div>
-
-                    <div class="card card-block bg-faded">
-                        <div class="text-right">
-                            <a class="btn btn-success" href="">
-                                Add new Comment
-                            </a>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <strong>Luiz</strong>
-                                <span class="pull-right">10 days ago</span>
-                                <p>It is increadible!!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+<div class="content portfolio container-fluid">
+    <div class="row">
+        <div class="col col-3">
+            <div class="navbar-fixed-left">
+                <ul class="nav nav-tabs menu" role="tablist">
+                    <% sections.forEach(function (section) { %>
+                        <li class="nav-item">
+                            <a class="nav-link" id="<%= section.name.replace(" ", "") %>-tab" data-toggle="tab"
+                               href="#<%= section.name.replace(" ", "") %>" role="tab"
+                               aria-controls="<%= section.name.replace(" ", "") %>"><%= section.name %></a>
+                        </li>
+                    <% }) %>
+                </ul>
             </div>
         </div>
 
-        <!--<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>-->
-        <!--<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>-->
+        <div class="col col-9">
+            <div class="tab-content" id="portfolioTabs">
+                <% sections.forEach(function (section) { %>
+                    <div class="tab-pane" id="<%= section.name.replace(" ", "") %>" role="tabpanel" aria-labelledby="<%= section.name.replace(" ", "") %>-tab">
+                        <section class="awSlider">
+                            <div id="<%= `id` + section._id %>" class="carousel slide" data-ride="carousel">
+
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    <% var current;%>
+                                    <% for (var j = 0; j < section.pictures.length; j++) { %>
+                                        <% current = j%>
+                                        <div class="carousel-item">
+                                            <img src="/<%= section.pictures[j].imagePath %>">
+                                            <div class="carousel-caption d-none d-md-block"><%= section.pictures[j].name %></div>
+                                        </div>
+                                    <% } %>
+                                </div>
+
+
+                                <a class="carousel-control-prev" href="#<%= `id` + section._id %>" role="button"
+                                   data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#<%= `id` + section._id %>" role="button"
+                                   data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <% for (var i = 0; i < section.pictures.length; i++) { %>
+                                        <li data-target="#<%= `id` + section._id %>" data-slide-to="<%= i %>"></li>
+                                    <% } %>
+                                </ol>
+
+                                <div class="card card-block bg-faded">
+                                    <div class="text-right">
+                                        <a class="btn btn-success" href="">
+                                            Add new Comment
+                                        </a>
+                                    </div>
+                                    <hr>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <strong>Luiz</strong>
+                                            <span class="pull-right">10 days ago</span>
+                                            <p>It is increadible!!</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                <% }) %>
+            </div>
+        </div>
     </div>
-    <% })%>
-    <!--<div class="navbar-fixed-left">-->
-        <!--<ul class="menu">-->
-            <!--<a href=""><li class="link">Fan Art</li></a>-->
-            <!--<hr>-->
-            <!--<a href=""><li class="link">Fantasy</li></a>-->
-            <!--<hr>-->
-            <!--<a href=""><li class="link">Concept Art</li></a>-->
-        <!--</ul>-->
-    <!--</div>-->
-
-
-
-
-
 </div>
 
-<% include partials/footer.ejs%>
+
+<% include partials/footer.ejs %>
