--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
             if (i % 2 == 0) { %>
                 <div class="row item">
                     <div class="caption col-sm-6">
-                        <a href="/portfolio/#<%=  section.name.replace(" ", "")%>"><h2><%= section.name %> </h2></a>
+                        <a href="/portfolio#<%=  section.name.replace(" ", "")%>"><h2><%= section.name %> </h2></a>
                         <p><%= section.description %> </p>
                     </div>
                     <div class="frame image col-sm-5 offset-sm-1">
