--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,9 +27,10 @@
             <span></span>
         </div>
     </div>
-    <%if (authorized) {%>
-    <div class="logout float-right">
-        <a href="/logout"><img src="/public/images/logout2.svg" alt=""></a>
-    </div>
-    <%}%>
+
+    <% //if (authorized) {%>
+    <!--<div class="logout float-right">-->
+        <!--<a href="/logout"><img src="/public/images/logout2.svg" alt=""></a>-->
+    <!--</div>-->
+    <%//}%>
 </header>
