--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -13,6 +13,14 @@
                                aria-controls="<%= section.name.replace(" ", "") %>"><%= section.name %></a>
                         </li>
                     <% }) %>
+                        <div class="section-divider">
+                            <img src="/public/images/divider.svg" alt="">
+                        </div>
+                    <li class="nav-item">
+                        <a class="new-section" href="/addSection">
+                            New Section
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
