--- a/public/stylesheets/login.scss
+++ b/public/stylesheets/login.scss
@@ -1,6 +1,6 @@
 .content {
   min-height: calc(100vh - 140px); /* will cover the 100% of viewport */
-  overflow: hidden;
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -30,11 +30,16 @@
     0px 18px 23px rgba(0,0,0,0.1);
   }
 }
+
+.container.form.section{
+    height: 100% !important;
+}
 .container.form{
   margin: 0 auto 70px auto;
   width: 680px;
   height: 400px;
   position: relative;
+
 
   .blur {
     width: 100%;
@@ -95,6 +100,9 @@
   text-align: center;
   margin-top: 40px;
 
+  .group.file {
+    width: 180px;
+  }
   .group {
     position: relative;
     margin: 40px auto;
@@ -111,10 +119,13 @@
       height: 40px;
       border: none;
       border-bottom: 1px solid #757575;
-      color: #f5f1a9
+      color: #f5f1a9;
     }
     input:focus {
       outline: none;
+    }
+    input.file {
+      width: 100%;
     }
     label {
       color: #999;
@@ -128,6 +139,11 @@
       -moz-transition: 0.2s ease all;
       -webkit-transition: 0.2s ease all;
     }
+    label.file{
+
+      width: 100%;
+      left: 5px;
+    }
 
     /* active state */
     input:focus ~ label, input:valid ~ label {
@@ -140,6 +156,9 @@
       position: relative;
       display: block;
       width: 350px;
+    }
+    .bar.file {
+      width: 100%;
     }
     .bar:before, .bar:after {
       content: '';
@@ -196,4 +215,83 @@ input:focus ~ .highlight {
 @keyframes inputHighlighter {
   from { background:#5264AE; }
   to 	{ width:0; background:transparent; }
+}
+
+
+.imagePreview {
+  width: 100%;
+  height: 190px;
+  //background:url(http://cliquecities.com/assets/no-image-e3699ae23f866f6cbdf8ba2443ee5c4e.jpg);
+  background-color: rgba(0,0,0,0.2);
+  display: flex;
+  border: 1px solid rgb(100, 99, 65);
+  border-bottom: none;
+  box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
+
+  img{
+    fill: #f5f1a9;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
+
+  }
+
+}
+.btn-primary
+{
+  display:block;
+  border-radius:0px;
+  box-shadow:0px 4px 6px 2px rgba(0,0,0,0.2);
+  margin-top:-5px;
+  cursor: pointer;
+  letter-spacing: 1px;
+  background: rgba(0,0,0,0.3);
+  border: 2px solid rgba(179, 176, 122, 0.55);
+  color: #f5f1a9;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+}
+.btn-primary:hover{
+  background: rgba(0,0,0,0.3);
+  border: 2px solid #f5f1a9;
+}
+
+.btn-primary:active {
+  outline: none;
+  background: #f5f1a9 !important;
+  color: white !important;
+}
+.imgUp
+{
+  margin-bottom:15px;
+}
+.del
+{
+  position:absolute;
+  top:0px;
+  right:15px;
+  width:30px;
+  height:30px;
+  text-align:center;
+  line-height:30px;
+  background-color:#999;
+  cursor:pointer;
+}
+.imgAdd
+{
+  width:30px;
+  height:30px;
+  border-radius:50%;
+
+  background-color: rgba(185, 165, 11, 0.37);
+  color:#fff;
+  box-shadow:0px 0px 2px 1px rgba(0,0,0,0.2);
+  text-align:center;
+  line-height:30px;
+  margin-top:0px;
+  cursor:pointer;
+  font-size:15px;
+
 }
