--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,13 @@
 <footer class="footer">
     <div class="link float-right">
         <h4>Developed by
-            <a href="">Aygul Malikova</a>
+            <a href="https://vk.com/a_malikova" target="_blank">Aygul Malikova</a>
         </h4>
     </div>
 
 </footer>
 
-
+<script type="text/javascript" src="/public/javascripts/jquery.uploadPreview.min.js"></script>
 <script type="text/javascript" src="/public/javascripts/main.js"></script>
-
 
 </body>
